# SPNNArch

./: .gitignore  LICENSE  LICENSE-THESIS  README.md  pyproject.toml
JlCode/: Manifest.toml  Project.toml
JlCode/src/: CompSuperpos.jl  JlCode.jl  experimentlogger.jl  plotstylereference.jl  plotting_utils.jl  simple_intervals.jl  utils.jl
JlCode/test/: runtests.jl
experimentsjl/: error_estimates.jl  error_estimates_trained.jl  polygon_defs.jl  polygon_solution_full_nb.jl  test_polygon_defs.jl
src/masterthesis/: config.py  experiment_logger.py  feature_generation.py  icfg.py  plotting_utils.py  stacked_torch_modules.py  style_reference.py  toy_models_metrics.py  trainer.py  utils.py
src/masterthesis/experiments/: __init__.py  asymptotic_feature_representation.py  feat_repr_over_training.py  feature_WtW_visualization.py  feature_geometry_stability.py  feature_metrics_comparison.py
src/masterthesis/experiments/activation_function_experiments/: __init__.py  activation_function_comparison.py
src/masterthesis/experiments/optimizer_comparison/: __init__.py  optimizer_comparison.py  optimizer_comparison_sidebyside.py
src/masterthesis/experiments/scaling_experiments/: __init__.py  scaling_hidden_over_training.py
test/: demo_nb.py  test_distributions.py  test_experiment_logger.py  test_icfg.py  test_stacked_modules.py  test_utils.py
