[project]
name = "masterthesis"
version = "0.1.0"
description = ""
authors = [
    {name = "AJB-ajb",email = "al.busch@accc.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ray (>=2.47.0,<3.0.0)",
    "deprecated (>=1.2.18,<2.0.0)",
    "pytorch-lightning (>=2.5.3,<3.0.0)",
    "wandb (>=0.21.1,<0.22.0)",
    "scipy (>=1.9.0,<1.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
